--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -1,1 +1,13 @@
 @import "bootstrap/scss/bootstrap.scss";
+ul{
+    list-style: none;
+}
+a{
+    color:  inherit;
+    text-decoration: none;
+}
+
+.my-container{
+    width: 80%;
+    margin: 0 auto;
+}
